--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@ body{
 }
 h1{
     font-size: 55px;
+    font-weight: 200;
+}
+p{
+    font-size: 20px;
 }
 #f-i{
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
     
 }
 .f-s{
@@ -29,14 +33,24 @@ h1{
     border-radius: 40px 40px 40px 40px;
     font-weight: 700;
 }
+.container{
+    position: relative;
+}
 .s-s{
-    /* /ackground-image: url(top-banner.png); */
-    /* background-repeat: no-repeat; */
-    /* background-size: 200vw 100vh; */
-    /* width: 1200px;
-    height: 500px; */
-    /* width: 70%;
-    height: auto ; */
-    /* background-size: 5760px 2730px;
-    width: 100%; */
+    position: absolute;
+    top: 10%;
+    left: 60%;
+    font-weight: 200;
+}
+.i{
+    width: 100%;
+}
+.s-s-button{
+    background-image: linear-gradient(orange, tomato, orange);
+    text-decoration: none;
+    padding: 20px 30px;
+    color: white;
+    border-radius: 40px 40px 40px 40px;
+    font-weight: 900;
+    font-size: 20px;
 }
