4 th part on working

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
+    font-family: 'Cormorant Garamond', serif;
     font-family: 'Playfair Display', serif;
+    margin: 0;
 }
 .orange{
     color: orange;
@@ -45,7 +47,7 @@ p{
     position: absolute;
     top: 10%;
     left: 60%;
-    font-weight: 200;
+    right: .5%;
 }
 .i{
     width: 100%;
@@ -59,13 +61,21 @@ p{
     font-weight: 900;
     font-size: 20px;
 }
-.container-2{
+#container-2{
     position: relative;
     text-align: center;
+    margin-bottom: 10px;
 }
 .t-s{
     position: absolute;
     top: 10%;
     left: 25%;
     right: 25%;
+}
+.i-4{
+    width: 70%;
+}
+.recipie{
+    display: flex;
+    margin-left: 40px;
 }
